# indra_bert

./: .gitignore  README.md  indra_bert.py  pyproject.toml  stmt_classifier_basic_benchmark.py  test_model.ipynb  test_on_BioRED_train.py
data/: indra_benchmark_corpus_annotated_sample.jsonl
indra_agent_role_assigner/: model.py  preprocess.py  run_train_ner.sh  train.py
indra_bert/: __init__.py  indra_bert.py
indra_bert/agent_mutation_detector/: __init__.py  inference.py  model.py  preprocess.py  run_train.sh  run_train_in_explorer.sh  train.py
indra_bert/indra_agent_role_assigner/: inference.py  preprocess.py  run_train.sh  train.py
indra_bert/indra_stmt_classifier/: bert_classification_head.py  class_weights_utils.py  inference.py  model.py  preprocess.py  run_train.sh  run_train_in_explorer.sh  train.py  weighted_trainer.py
indra_stmt_agents_ner_model/: indra_stmt_agents_tagger.py  preprocess.py  run_train_ner.sh  train_indra_stmt_agents_ner.py
indra_stmt_classifier/: model.py  preprocess.py  train.py
indra_stmt_classifier_model/: indra_stmt_classifier.py  preprocess.py  relation_model.py  run_train_indra_stmt_classifier.sh  train_indra_stmt_classifier.py
ner_agent_detector/: model.py  postprocess.py  train.py
ner_model/: ner_annotator.py  prepare_ner_dataset.py  run_train_ner.sh  train_ner.py
re_model/: prepare_relation_classifier_dataset.py  re_annotator.py  relation_model.py  train_agent_role_assignment.py  train_relation_classifier.py
training_data_processor/: indra_stmts_processor.py  run_indra_stmts_processor.sh
(+12 files in other folders)
